# spine

./: .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CLAUDE_GUIDE.md  CLI_REFERENCE.md  CODEX_GUIDE.md  CODE_OF_CONDUCT.md  COMMUNITY.md  CONTRIBUTING.md  FEATURES.md  KNOWLEDGE_GRAPH.md  LICENSE  OPERATIONS.md  README.md  SECURITY.md  SETUP.md  USER_GUIDE.md  alembic.ini  docker-compose.dev.yml  pyproject.toml
.claude-plugin/: marketplace.json
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md  release.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  codeql.yml  dependency-audit.yml  publish-pypi.yml  publish-synaptixs.yml  publish-testpypi.yml  release.yml  security-scan.yml
assets/: spine-architecture-diagram.html
codex-marketplace/: README.md
docs/specs/: KNOWLEDGE-VISION.md  PRODUCT-KNOWLEDGE-GRAPH.md  README.md  bet2-trust-spine.md  bet2c-in-loop-approval.md  bet2c-rbac-multitenancy.md  catalog-then-compose-roadmap.md  cross-run-semantic-memory.md  intake-backlog-progress.md  java-codegen.md  live-observability-otel.md  models.md  multi-language-java.md  persona-skill-measurement.md  persona-skill-system.md  phase5-agentic-codegen-loop.md  pkg-code-grounded-understanding.md  project-comprehension-memory-bank.md  sandboxed-test-execution.md  sdlc-target-layout-scaffold.md  spine-vignette-runbook.md  standout-evals-and-personas.md  tri-repo-integration.md  typescript-codegen.md  unified-ui.md
examples/gap_rules/: intent_gaps.yaml
examples/intake/: sample-spec.md
examples/templates/: business_writer.yaml  code_executor.yaml  code_reviewer.yaml  data_analyst.yaml  document_summarizer.yaml  intent_extractor.yaml  policy_checker.yaml  research_agent.yaml  spec_writer.yaml
migrations/: env.py
migrations/versions/: 0001_initial_registry_tables.py  0002_glossary_entries.py  0003_calibration_history.py  0004_approval_requests.py  0005_add_tenant_id.py  0006_agent_memory.py
reserve-synaptixs/: README.md  pyproject.toml
reserve-synaptixs/src/synaptixs/: __init__.py
scripts/: agentic_eval.py  audit_eval.py  check-mermaid.js  codegen_ab.py  codegen_benchmark.py  intents_to_confluence.py  live_confluence.py  live_github_auth.py  live_review.py  live_sdlc_worker.py  security_js_review.py  security_sweep.py  security_verify.py  skill_ab.py  skill_promote.py  smoke-test.sh
src/orchestrator/: cli.py  doctor.py  init_scaffold.py  launch.py
tests/: test_cli.py  test_doctor.py  test_env_example.py  test_init_scaffold.py  test_launch.py  test_stats.py
tests/agentic/: test_approval.py  test_codegen_tools.py  test_export.py  test_loop.py  test_loop_tracing.py  test_mcp_tools.py  test_memory_tools.py  test_policy.py  test_tools.py
tests/approval/: test_models.py
tests/catalog/: test_catalog_and_planner.py  test_profile.py  test_skill_import.py  test_skills.py  test_vetting.py
tests/codereview/: test_auth.py  test_github_client.py  test_grounding.py  test_reviewer.py  test_semgrep.py  test_verifiers.py  test_webhook.py
tests/core/: test_claim.py  test_env.py  test_llm_litellm.py  test_llm_mock.py  test_llm_toolcalls.py  test_prompt_safety.py  test_state.py  test_tool_client.py
tests/evals/: test_brownfield_loader.py  test_comparison.py  test_graders.py  test_harness.py  test_promotion.py  test_skill_ab.py  test_skill_tasksets.py
tests/gateway/: test_auth.py  test_fetch_metric_definition.py  test_fetch_url.py  test_handlers.py  test_loader.py  test_object_store_tools.py  test_query_warehouse.py  test_rate_limit.py  test_run_python_analysis.py  test_summarize_text.py  test_web_search.py
tests/intake/: test_backlog_doc.py  test_cache.py  test_confluence.py  test_factory.py  test_file_source.py  test_gaps.py  test_intent_split_eval.py  test_intents.py  test_jira.py  test_jira_source.py  test_mcp_source.py  test_notion.py  test_openspec_source.py  test_openspec_writer.py  test_report.py  test_service.py  test_specs.py  test_web.py
tests/integration/: conftest.py  test_approvals_api.py  test_approvals_e2e.py  test_calibration.py  test_gateway.py  test_golden_research.py  test_manager_workflow.py  test_mcp_onboard.py  test_migrations.py  test_registry_api.py  test_registry_repo.py  test_replan_loop.py  test_runs_api.py  test_runtime_checkpoint.py  test_sdlc_workflow_e2e.py  test_sequential_workflow.py  test_trace_ui.py
tests/ir/: test_graph.py  test_validator.py  test_validator_manager.py  test_validator_sequential.py
tests/knowledge/: test_access.py  test_consolidate.py  test_current_state.py  test_infrastructure.py  test_memory_bank.py  test_report_html.py  test_report_svg.py
tests/mcp/: test_config.py  test_contract_and_handler.py  test_db.py  test_onboard.py  test_registry.py
tests/obs/: test_tracing.py
tests/personas/: test_auditor.py  test_auditor_eval.py  test_software_engineer.py
tests/pkg/: test_c_extractor.py  test_cpp_extractor.py  test_csharp_extractor.py  test_data_layer_link.py  test_default_extractors.py  test_doc_link.py  test_doc_source.py  test_docs.py  test_export.py  test_facts_and_store.py  test_go_extractor.py  test_impact.py  test_java_extractor.py  test_migrations.py  test_persistence.py  test_python_extractor.py  test_retrieval.py  test_schema.py  test_sql_extractor.py  test_typescript_extractor.py  test_verifier.py
tests/planner/: test_v0_unit.py  test_v1_unit.py
tests/plugin/: test_auth.py  test_manifests.py  test_server.py
tests/registry/: test_agent_template.py  test_api_health.py  test_auth.py  test_backlog.py  test_capabilities_and_jobs.py  test_console_and_runs.py  test_db_models.py  test_examples_load.py  test_fs_browser.py  test_inbox.py  test_loader.py  test_mcp_config_editing.py  test_md_js.py  test_middleware.py  test_personas_api.py  test_phase_a.py  test_phase_b.py  test_phase_c.py  test_phase_d.py  test_phase_e.py  test_principal.py  test_registry_page.py  test_repo_sources.py  test_repositories.py  test_run_artifacts.py  test_run_start.py  test_stream.py  test_tool_contract.py  (+4 more)
(+375 files in other folders)
