[project]
name = "synaptixs-spine"
version = "3.6.0"
description = "Agent orchestration platform — planner, registry, runtime, verifier."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [{ name = "Synaptixs", email = "noreply@synaptixs.dev" }]
keywords = ["llm", "agents", "sdlc", "orchestration", "temporal", "codegen"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
]
dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "sqlalchemy[asyncio]>=2.0",
    "greenlet>=3.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.1",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "typer>=0.12",
    "httpx>=0.27",
    "litellm>=1.50",
    "langgraph>=0.2",
    "langgraph-checkpoint-postgres>=2.0",
    "pyyaml>=6.0",
    "types-pyyaml>=6.0",
    "aioboto3>=13.0",
    "types-aiobotocore-s3>=2.13",
    "temporalio>=1.7",
    "pyjwt[crypto]>=2.9",
    "rdflib>=7.0",
    "pyshacl>=0.26",
]

[project.optional-dependencies]
security = [
    "semgrep>=1.0",
]
# PKG multi-language extraction (G6). tree-sitter gives accurate ASTs; the
# JavaExtractor lazy-imports these so the base install stays stdlib-only.
java = [
    "tree-sitter>=0.21",
    "tree-sitter-java>=0.21",
]
# TypeScript PKG front-end (G6). Same lazy-import contract as the `java` extra.
typescript = [
    "tree-sitter>=0.21",
    "tree-sitter-typescript>=0.21",
]
# C# / .NET PKG front-end. Same lazy-import contract as the `java` extra.
csharp = [
    "tree-sitter>=0.21",
    "tree-sitter-c-sharp>=0.21",
]
# C PKG front-end (.c/.h). Same lazy-import contract as the `java` extra.
c = [
    "tree-sitter>=0.21",
    "tree-sitter-c>=0.21",
]
# C++ PKG front-end (.cpp/.hpp/…). Same lazy-import contract as the `java` extra.
cpp = [
    "tree-sitter>=0.21",
    "tree-sitter-cpp>=0.21",
]
# SQL PKG front-end (.sql). Uses sqlglot (pure-Python, multi-dialect DDL+DML
# AST — no tree-sitter). Lazy-imported by pkg/sql_extractor.py, so the base
# install stays dependency-free: pip install 'synaptixs-spine[sql]'.
sql = [
    "sqlglot>=25",
]
# SQL greenfield codegen against a REAL Postgres (fidelity beyond the default
# in-memory SQLite). Opt-in via SDLC_SQL_ENGINE=postgres; needs Docker.
sql-postgres = [
    "testcontainers>=4",
    "psycopg[binary]>=3",
]
# Onboard external MCP servers (DBs, Atlassian, …) as orchestrator tools. The
# MCP client lazy-imports this, so the base install stays MCP-free.
mcp = [
    "mcp>=1.0",
]
# The SDLC feature/run pipeline shells out to pytest to run generated tests.
# pytest is a dev-only dep, absent from a plain install — install this extra so
# `sdlc feature`/`run` work out of the box: pip install 'synaptixs-spine[sdlc]'.
sdlc = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
]
# The developer TUI (P4). Textual is lazy-imported by the `tui` CLI command, so
# the base install (and the web UI) stay Textual-free.
tui = [
    "textual>=0.50",
]
# Live OpenTelemetry tracing (G16). orchestrator.obs.tracing lazy-imports this and
# stays a no-op unless OTEL_EXPORTER_OTLP_ENDPOINT is set, so the base install is
# unaffected: pip install 'synaptixs-spine[otel]'.
otel = [
    "opentelemetry-sdk>=1.27",
    "opentelemetry-exporter-otlp-proto-http>=1.27",
]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5",
    "asgi-lifespan>=2.1",
    "ruff>=0.6",
    "mypy>=1.11",
    "pre-commit>=3.8",
    # so the tracing span-tree tests can use the in-memory exporter
    "opentelemetry-sdk>=1.27",
    # async SQLite driver for fast, Postgres-free repository unit tests
    "aiosqlite>=0.20",
    # SQL PKG front-end parser — pure-Python, so CI exercises the sql_extractor
    # tests directly rather than skipping them.
    "sqlglot>=25",
]

[project.scripts]
orchestrator = "orchestrator.cli:app"
orchestrator-mcp = "orchestrator.plugin.__main__:main"

[project.urls]
Repository = "https://github.com/synaptixs/spine"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/orchestrator"]

[tool.ruff]
line-length = 110
target-version = "py312"

[tool.ruff.lint]
# "S" = flake8-bandit. Security linting runs in the normal `ruff check` gate rather
# than as a separate bandit step: same coverage for a Python-only tree, no extra
# dependency, no extra CI job. Deeper dataflow analysis is CodeQL's job (see
# .github/workflows/codeql.yml). Note several `# noqa: S...` suppressions predate
# this — they were written when the rules were dormant and are now live.
select = ["E", "F", "I", "B", "UP", "N", "SIM", "S"]
ignore = [
    # FastAPI's recommended `param: T = Depends(...)` triggers B008.
    "B008",
    # Spine is a build/test orchestrator — shelling out to pytest/cmake/meson/git
    # IS the product. Every call site builds an argv list (never `shell=True`), so
    # the risk these flag (shell metacharacter injection) is structurally absent.
    # Enabling them would mean ~19 permanent noqa comments across the runners.
    "S603",
    "S607",
    # try/except/continue. A code-quality signal, not a security one, and the two
    # sites (pkg/migrations.py, spine/grounder.py) are deliberate best-effort loops.
    "S112",
    # Migration to enum.StrEnum / PEP-695 generics is mechanical churn that
    # doesn't change runtime behaviour; revisit if Python 3.12 floor moves up.
    "UP042",
    "UP046",
    "UP047",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    # Test files use shadowing builtins (id, version) and broad raises for
    # negative-path coverage.
    "B017",
    "A002",
    # `assert` is what a test IS (~3,500 sites).
    "S101",
    # Dummy credentials, fixture temp paths, and localhost binds in fixtures —
    # including deliberate fake secrets for the codereview secret-detector tests.
    "S105",
    "S106",
    "S108",
    "S104",
]
# The local dev launcher: binds 0.0.0.0 so the UI is reachable from a container or
# LAN device, and ships a placeholder session secret for zero-config local runs.
# Both are dev-only affordances — see OPERATIONS.md for the deployed configuration.
"src/orchestrator/launch.py" = ["S104", "S105"]
# `PASS = "pass"` — a verifier verdict enum. S105 matches the *word*, not a secret.
"src/orchestrator/runtime/verifier.py" = ["S105"]
"src/orchestrator/runtime/verifiers/base.py" = ["S105"]
# Invariant assertions that narrow a type for mypy rather than validate input; none
# is a security check, so `python -O` stripping them changes nothing.
"src/orchestrator/pkg/migrations.py" = ["S101"]
"src/orchestrator/registry/api/tasks.py" = ["S101"]
"src/orchestrator/registry/api/workspace.py" = ["S101"]
"src/orchestrator/runtime/graphs.py" = ["S101"]
# `/tmp/sdlc-workspaces` is an env-overridable DEFAULT (SDLC_WORKSPACE_ROOT), and
# each run lands in a `uuid4()` subdirectory, so the path an attacker would have to
# predict isn't predictable. What S108 does still reach: the shared parent, which is
# pre-createable as a symlink on a multi-tenant host. Deployments set the env var
# (OPERATIONS.md). Left for the Phase 2 sdlc/ review rather than fixed blind —
# see docs/specs/security-review-plan.md.
"src/orchestrator/sdlc/feature_runner.py" = ["S108"]
"src/orchestrator/sdlc/worker.py" = ["S108"]
# Dev/live-testing helpers — not packaged (hatch ships src/orchestrator only), run
# by hand against test accounts. Same two categories as above: asserts that narrow a
# type, and an env-overridable workspace-root default.
"scripts/**" = ["S101", "S108"]
# The console page embeds a JS blob as a Python string; line length there is
# JS style, not Python — don't hold the embedded script to the 110-col bar.
"src/orchestrator/registry/api/console.py" = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src", "tests"]

# tree-sitter is an optional extra (the `java`/`typescript` PKG front-ends); not
# installed in the default/CI env, so don't fail type-checking on its absence.
[[tool.mypy.overrides]]
module = ["tree_sitter", "tree_sitter.*", "tree_sitter_java", "tree_sitter_typescript", "tree_sitter_c_sharp", "tree_sitter_c", "tree_sitter_cpp"]
ignore_missing_imports = true

# `textual` is the optional `tui` extra; not installed in the default/CI env.
[[tool.mypy.overrides]]
module = ["textual", "textual.*"]
ignore_missing_imports = true

# The Textual app is thin glue whose base classes are `Any` when the `tui` extra
# is absent (CI), which trips "cannot subclass Any". Skip type-checking that one
# module so the result is stable whether or not textual is installed; the
# dependency-light `tui.client` keeps full mypy coverage.
[[tool.mypy.overrides]]
module = ["orchestrator.tui.app"]
ignore_errors = true

# `mcp` is an optional extra (the MCP client transport), lazy-imported; not in
# the default/CI env, so don't fail type-checking on its absence.
[[tool.mypy.overrides]]
module = ["mcp", "mcp.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers -m 'not integration and not real_llm'"
asyncio_mode = "auto"
markers = [
    "integration: tests that require a running Postgres (run with -m integration)",
    "real_llm: tests that hit a real LLM provider (run with -m real_llm; needs API keys)",
]
