[project]
name = "synaptixs"
version = "0.0.1"
description = "Reserved by Synaptixs. The product is Spine — install 'synaptixs-spine'."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
authors = [{ name = "Synaptixs" }]

[project.urls]
Repository = "https://github.com/synaptixs/spine"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/synaptixs"]
